--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3246,6 +3246,9 @@
     <ClCompile Include="Baekjoon\12.Floyd-warshall\2.Gold\1613.cpp">
       <Filter>Baekjoon\12.Floyd-warshall\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\7.Sorting\0.Bronze\2204.cpp">
+      <Filter>Baekjoon\7.Sorting\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
